policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - argocd
                - argo-rollouts
                - velero
                - calico-system
                - tigera-operator
                - local-path-storage
      validate:
        message: "El uso de la etiqueta 'latest' esta prohibido, se requiere una version explicita."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
