policies/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-non-root
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-runasnonroot
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kyverno
                - argocd
                - argo-rollouts
                - velero
                - calico-system
                - tigera-operator
                - local-path-storage
      validate:
        message: "Los contenedores deben ejecutarse sin privilegios de root (runAsNonRoot: true)."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
